# edge-cli

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  appliance-config.sh  appliance-delete.sh  appliance-inputs.sh  appliance-list.sh  appliance-outputs.sh  appliance-restart.sh  appliance-show.sh  build-info.sh  build.rs  create-input.sh  create-output.sh  delete-appliance.sh  delete-input.sh  delete-output.sh  edge  group-list.sh  group-show.sh  input-create.sh  input-delete.sh  input-list.sh  input-show.sh  list-appliances.sh  list-inputs.sh  list-outputs.sh  login.sh  node-list.sh  output-create.sh  output-delete.sh  output-list.sh  output-show.sh  output-update.sh  region-create.sh  region-delete.sh  region-list.sh  rust-toolchain.toml  (+1 more)
.github/workflows/: rust.yml
contrib/: dump-appliance-configs.sh  input-move.sh  output-copy.sh  perf-check-status.sh  perf-cleanup.sh  video-node-perf.sh  video-perf-forwarding.sh  video-perf-test.sh
debian/: control
edgectl/: Cargo.toml  Makefile
edgectl/src/: appliance.rs  buildinfo.rs  cli.rs  completions.rs  edge.rs  group.rs  input.rs  main.rs  node.rs  output.rs  region.rs  settings.rs  tunnels.rs
src/: alarm.rs  appliance.rs  cli.rs  colors.rs  config.rs  context.rs  edge.rs  group_list.rs  health.rs  input.rs  kubernetes.rs  login.rs  main.rs  output.rs  output_list.rs  region.rs  token.rs  tunnels.rs
src/tui/: app.rs  events.rs  mod.rs  resources.rs  ui.rs
