[package]
name = "edgectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.48"
reqwest = { version = "0.12.23", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
uuid = { version = "1.18.1", features = [ "v4" ] }
openssl = { version = "0.10.73", features = ["vendored"] } # vendor openssl to enable static builds
anyhow = "1.0.99"
clap_complete = "4.5.57"
