[package]
name = "edgectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
reqwest = { version = "0.11.23", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tabled = "0.15.0"
